# cloudfs

./: .clang-format  .commitlintrc.json  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT_HANDOVER.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY_IMPROVEMENTS.md  commitlint.config.js  description.yml  extension_config.cmake  package.json  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  build.yml
agent/: Dockerfile  cloudfs-agent.service  go.mod  main.go  setup.sh
docs/: BUILD_QUICKSTART.md  COMMITLINT_SETUP.md  COMMIT_PLAN.md  DEVELOPMENT.md  README.md  TASK1_STATUS.md  TASK4_PUBLICATION_CHECKLIST.md  adding_a_provider.md
scripts/: README.md  build_and_test.sh  check_deps.sh  check_setup_status.sh  execute_commit_plan.sh  setup_dev_tools.sh  test_commitlint.sh  validate_dev_setup.sh
src/core/: cloud_auth.cpp  cloud_cache.cpp  cloud_filesystem.cpp  cloud_http.cpp  cloud_secret.cpp  cloud_table_functions.cpp
src/extension/: cloudfs_extension.cpp
src/include/: cloudfs_extension.hpp
src/include/core/: cloud_auth.hpp  cloud_backend.hpp  cloud_cache.hpp  cloud_filesystem.hpp  cloud_http.hpp  cloud_item.hpp  cloud_secret.hpp  cloud_table_functions.hpp
src/include/providers/: dropbox_backend.hpp  gdrive_backend.hpp  onedrive_backend.hpp  sftp_backend.hpp  sharepoint_backend.hpp  vfs_backend.hpp
src/providers/dropbox/: dropbox_auth.cpp  dropbox_backend.cpp
src/providers/gdrive/: gdrive_auth.cpp  gdrive_backend.cpp
src/providers/onedrive/: onedrive_auth.cpp  onedrive_backend.cpp
src/providers/sftp/: sftp_backend.cpp
src/providers/sharepoint/: sharepoint_auth.cpp  sharepoint_backend.cpp
src/providers/vfs/: vfs_backend.cpp
test/: test_suite.py
test/sql/: all_providers.test
